# eips-wtf

./: .gitignore  LICENSE  README.md
backend/: README.md  db.py  extract_metadata.py  main.py  models.py  pyproject.toml  schemas.py  server.py
backend/eips/: db.py  eip_repo.py  schemas.py  server.py
backend/eips/worker/: __init__.py  extract.py
backend/scripts/: extract_metadata.py
backend/worker/: __init__.py  extract.py
frontend/: .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: CategoryViz.tsx  Footer.tsx  Header.tsx  Layout.tsx
frontend/src/pages/: 404.tsx  _app.tsx  index.tsx  index_2.tsx
frontend/src/pages/EIPS/: [eip].tsx
frontend/src/pages/api/: commits.ts
frontend/src/pages/categories/: [category].tsx
frontend/src/styles/: globals.css
frontend/src/types/: eip.ts  eip_diff.ts
frontend/src/utils/: api.ts  constants.ts
