[tool.poetry]
name = "eips"
version = "0.1.0"
description = ""
authors = ["ren <84360463+rencryptofish@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "==3.1.30"
psycopg2 = "^2.9.6"
peewee = "^3.16.0"
pydantic = "^1.10.7"
pydriller = "==2.4.1"
python-frontmatter = "^1.0.0"
fastapi = "^0.95.0"
fastapi-cache2 = "^0.2.1"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipykernel = "^6.22.0"
poetry-dotenv-plugin = "^0.1.0"

[tool.poetry.scripts]
extract-metadata = "scripts.extract_metadata:main"
server = "server:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
